SimpleComplex/Filter 1.x, 2017-05-25
------------------------------------
- Use ValidateByRules via Validate::challengeRules()
- Option errUnconditionally.
- Exceptions moved to sub namespace \Exception.

SimpleComplex/Filter 1.x, 2017-05-24
------------------------------------
- Unicode and Sanitize methods now (optionally) log and err on bad args.
- Unicode now (also) coerces subject arg to string.
- New sanitizer numberToString().

SimpleComplex/Filter 1.x, 2017-05-23
------------------------------------
- Parameter/return type declarations (Validate only, so far).
- numeric() now returns 'integer'/'float' on pass.
- ValidateByRules new 'alternativeEnum' pseudo-rule replaces similar which only
  worked when the var was empty().

SimpleComplex/Filter 1.x, 2017-05-22
------------------------------------
- Initial design complete, however not tested.